<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".Activities.DeviceMeasureActivity">
    <!--设备测量界面-->

    <!--第一排按钮-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <!--清图像按钮-->
        <Button
                android:id="@+id/clear_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/清图像"
                tools:ignore="ButtonStyle" />
        <!--清除时间戳按钮-->
        <Button
                android:id="@+id/button_clear_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/清除时间"
                tools:ignore="ButtonStyle" />
    </LinearLayout>
    <!--第二排按钮-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <!--开始测试按钮-->
        <Button
                android:id="@+id/button_start_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/开始测试"
                tools:ignore="ButtonStyle" />
        <!--标记关键时间点按钮-->
        <Button
                android:id="@+id/button_mark_key_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/标记关键点"
                tools:ignore="ButtonStyle" />
        <!--结束测试按钮-->
        <Button
                android:id="@+id/button_end_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/结束测试"
                tools:ignore="ButtonStyle" />
        <!--上传测试记录按钮-->
        <Button
                android:id="@+id/measure_upload_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_record"
                tools:ignore="ButtonStyle" />
    </LinearLayout>

    <!--显示选择的病人-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
        <!--选择的病人tag-->
        <TextView
                android:id="@+id/measure_patient_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:text="@string/cur_patient" />
        <TextView
                android:id="@+id/measure_selected_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unselected"/>
    </LinearLayout>
    <!--显示连接状态-->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
        <!--设备连接状态tag-->
        <TextView
                android:id="@+id/device_connect_status_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:text="@string/deviceConnectState" />
        <TextView
                android:id="@+id/device_connect_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"/>
    </LinearLayout>
    <!--绘图区-->
    <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
    <!--开始测试时间戳-->
    <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <!--结束测试时间戳-->
    <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>