<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddPatientActivity">
    <!--添加病人界面-->
    <!--标题-->
    <TextView
            android:id="@+id/add_patient_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/addPatient"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <!--输入区-->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_patient_title"
            app:layout_constraintVertical_bias="0.0">
        <!--病人姓名输入框-->
        <EditText
                android:id="@+id/add_patient_name"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/inputPatientName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <!--病人年龄输入框-->
        <EditText
                android:id="@+id/add_patient_age"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/inputPatientAge"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/add_patient_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <!--病人性别选择栏-->
        <RadioGroup
                android:id="@+id/add_patient_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/add_patient_age">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/selectPatientGander"
                    android:padding="5dp"
                    android:gravity="center_vertical"
                    android:textSize="18sp"/>

            <RadioButton
                    android:id="@+id/add_patient_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/male"
                    android:textColor="#000000"
                    android:textSize="20sp"/>

            <RadioButton
                    android:id="@+id/add_patient_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/female"
                    android:textColor="#000000"
                    android:textSize="20sp"/>
        </RadioGroup>
        <!--病人地区-->
        <TextView
                android:id="@+id/add_patient_location"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:hint="请选择病人地区"
                android:textSize="20sp"
                android:padding="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/textview_border"
                app:layout_constraintTop_toBottomOf="@+id/add_patient_gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <!--病人详细住址-->
        <EditText
                android:id="@+id/add_patient_address"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_marginTop="20dp"
                android:hint="请输入病人详细住址"
                android:textSize="20sp"
                android:padding="5dp"
                android:gravity="top"
                android:background="@drawable/textview_border"
                app:layout_constraintTop_toBottomOf="@+id/add_patient_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="textMultiLine"/>
        <!--病人身份证号输入-->
        <EditText
                android:id="@+id/add_patient_identity"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/inputPatientIdentity"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_patient_address"/>

        <Button
                android:id="@+id/add_patient_addBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/addPatient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_patient_identity"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>